--- a/styles/scss/blocks/_serve.scss
+++ b/styles/scss/blocks/_serve.scss
@@ -3,13 +3,19 @@
 
   &:before {
     background-color: $grey;
-    bottom: 185px;
+    bottom: -30px;
     content: '';
-    height: 704px;
     left: 0;
     position: absolute;
+    top: -30px;
     width: 100%;
     z-index: -1;
+
+    @media (min-width: 992px) {
+      bottom: 185px;
+      height: 704px;
+      top: unset;
+    }
   }
 
   &__header {
@@ -23,7 +29,18 @@
 
   &__list {
     @include list-unstyled;
-    display: flex;
-    gap: 30px;
+
+    @media (min-width: 992px) {
+      display: flex;
+      gap: 30px;
+    }
+  }
+
+  &__item {
+    & + & {
+      @media (max-width: 991.98px) {
+        margin-top: 20px;
+      }
+    }
   }
 }
