--- a/styles/scss/blocks/_choose.scss
+++ b/styles/scss/blocks/_choose.scss
@@ -6,7 +6,24 @@
 
   &__list {
     @include list-unstyled;
-    display: flex;
-    gap: 35px;
+
+    @media (min-width: 576px) {
+      display: grid;
+      gap: 60px 35px;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @media (min-width: 992px) {
+      display: flex;
+      gap: 35px;
+    }
+  }
+
+  &__item {
+    & + & {
+      @media (max-width: 575.98px) {
+        margin-top: 60px;
+      }
+    }
   }
 }
