--- a/styles/scss/blocks/_words-item.scss
+++ b/styles/scss/blocks/_words-item.scss
@@ -3,11 +3,18 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-width: 350px;
   overflow: hidden;
   transition: filter $base-duration ease;
 
-  &:hover {
+  @media (max-width: 991.98px) {
     box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
+  }
+
+  &:hover {
+    @media (min-width: 992px) {
+      box-shadow: 0px 10px 52px rgba(0, 0, 0, 0.08);
+    }
   }
 
   &__media {
@@ -28,17 +35,23 @@
   &__icon {
     @include bg-circle(50px);
     background-color: $white;
-    bottom: 0;
-    opacity: 0;
+    bottom: 20px;
     position: absolute;
     right: 20px;
-    transition: $base-duration ease-in;
-    visibility: hidden;
+
+    @media (min-width: 992px) {
+      bottom: 0;
+      opacity: 0;
+      transition: $base-duration ease-in;
+      visibility: hidden;
+    }
 
     .words-item:hover & {
-      bottom: 20px;
-      opacity: 1;
-      visibility: visible;
+      @media (min-width: 992px) {
+        bottom: 20px;
+        opacity: 1;
+        visibility: visible;
+      }
     }
   }
 
@@ -51,8 +64,11 @@
 
   &__content {
     background-color: $white;
-    padding: 31px 29px;
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
+    justify-content: space-between;
+    padding: 31px 29px;
 
     .words-item:hover & {
       color: initial;
