--- a/styles/scss/layout/_main.scss
+++ b/styles/scss/layout/_main.scss
@@ -48,6 +48,10 @@
   }
 
   &__words {
-    margin-bottom: -3px;
+    margin-bottom: 60px;
+
+    @media (min-width: 992px) {
+      margin-bottom: -3px;
+    }
   }
 }
