Доработана кнопка раскрытия мобильного меню

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -201,12 +201,17 @@ svg {
   flex-direction: column;
   height: 26px;
   justify-content: space-between;
+  margin: -15px;
   padding: 15px;
   position: absolute;
-  right: 10px;
-  top: 29px;
+  right: 0;
+  top: 45px;
   width: 33px;
   z-index: 999;
+}
+.header__checkbox:checked ~ .header__toggler {
+  position: fixed;
+  right: 15px;
 }
 @media (min-width: 768px) {
   .header__toggler {
