Доработано бургер-меню
Отключен скролл сайта при открытом меню
При клику по ссылкам меню закрывается
При резайзе также закрывается
Для оптимизации ресайза добавлена debounce-функция

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'components/logo';
 
 // layout
+@import 'layout/body';
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/footer';
