--- a/styles/scss/layout/_footer-unit.scss
+++ b/styles/scss/layout/_footer-unit.scss
@@ -1,6 +1,19 @@
+$footer-transition: 750ms;
+
 .footer-unit {
   &__title {
-    margin-bottom: 18px;
+    cursor: pointer;
+    margin-bottom: 0;
+    transition: margin $footer-transition ease;
+
+    @media (min-width: 576px) {
+      margin-bottom: 18px;
+      transition: none;
+    }
+
+    .footer-unit--expanded & {
+      margin-bottom: 18px;
+    }
   }
 
   &__list {
@@ -8,6 +21,12 @@
     font-size: 14px;
     letter-spacing: 0.5px;
     line-height: 1.93;
+
+    @media (max-width: 575.98px) {
+      height: 0px;
+      overflow: hidden;
+      transition: height $footer-transition ease;
+    }
   }
 
   &__item {
