--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -1,8 +1,4 @@
 .header {
-  @media (max-width: 991.98px) {
-    margin-bottom: 40px;
-  }
-
   &__body {
     align-items: center;
     display: flex;
@@ -30,7 +26,7 @@
     width: 33px;
     z-index: 999;
 
-    .body--menu-opened & {
+    .site--menu-opened & {
       position: fixed;
       right: 15px;
     }
@@ -51,7 +47,7 @@
       transform-origin: 0% 0%;
       transition: transform 0.4s ease-in-out;
 
-      .body--menu-opened & {
+      .site--menu-opened & {
         transform: rotate(45deg);
       }
     }
@@ -59,7 +55,7 @@
     &--2 {
       transition: transform 0.2s ease-in-out;
 
-      .body--menu-opened & {
+      .site--menu-opened & {
         transform: scaleY(0);
       }
     }
@@ -68,7 +64,7 @@
       transform-origin: 0% 100%;
       transition: transform 0.4s ease-in-out;
 
-      .body--menu-opened & {
+      .site--menu-opened & {
         transform: rotate(-45deg);
       }
     }
@@ -78,7 +74,7 @@
     display: none;
 
     @media (max-width: 767.98px) {
-      .body--menu-opened & {
+      .site--menu-opened & {
         align-items: center;
         background-color: $white;
         bottom: 0;
