--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -12,23 +12,23 @@
 @import 'components/logo';
 
 // layout
-@import 'layout/body';
+@import 'layout/site';
 @import 'layout/header';
-@import 'layout/main';
+@import 'layout/page';
 @import 'layout/footer';
 @import 'layout/footer-unit';
 
-// blocks
-@import 'blocks/intro';
-@import 'blocks/intro-form';
-@import 'blocks/partners';
-@import 'blocks/provide';
-@import 'blocks/provide-hint';
-@import 'blocks/using';
-@import 'blocks/serve';
-@import 'blocks/serve-card';
-@import 'blocks/choose';
-@import 'blocks/choose-item';
-@import 'blocks/words';
-@import 'blocks/words-item';
-@import 'blocks/experience';
+// page
+@import 'page/intro';
+@import 'page/intro-form';
+@import 'page/partners';
+@import 'page/provide';
+@import 'page/provide-hint';
+@import 'page/using';
+@import 'page/serve';
+@import 'page/serve-card';
+@import 'page/choose';
+@import 'page/choose-item';
+@import 'page/words';
+@import 'page/words-item';
+@import 'page/experience';
