--- a/styles/scss/page/_using.scss
+++ b/styles/scss/page/_using.scss
@@ -1,20 +1,20 @@
 .using {
   &__body {
     background: url('../../assets/images/bg/circle-group.svg') no-repeat top right, $aqua;
-    background-size: 40%;
+    background-size: 175px auto;
     border-radius: 20px;
     overflow: hidden;
     padding: 20px 20px;
     position: relative;
 
     @media (min-width: 576px) {
-      background-size: 20%;
+      background-size: 150px auto;
     }
 
     @media (min-width: 992px) {
       background: url('../../assets/images/bg/circle-group.svg') no-repeat top right,
         url('../../assets/images/bg/quarter.svg') no-repeat 46% 100%, $aqua;
-      background-size: unset;
+      background-size: 225px auto, 304px auto;
       padding: 91px 95px;
     }
   }
