Обновлено верхнее меню
Изменены тексты пунктов меню
Добавлены якоря на разделы страницы
Добавлена смена активного пункта через js
Выполнен рефакторинг js для логики меню

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -451,6 +451,7 @@ picture {
 }
 @media (min-width: 576px) {
   .footer-unit__title {
+    cursor: auto;
     margin-bottom: 18px;
     transition: none;
   }
