--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -14,6 +14,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 body {
   color: #323232;
   font-family: "Poppins", sans-serif;
@@ -1319,8 +1324,13 @@ picture {
   left: 0;
   position: absolute;
   right: 0;
-  top: 110px;
+  top: 0;
   z-index: -1;
+}
+@media (min-width: 768px) {
+  .experience::before {
+    top: 110px;
+  }
 }
 @media (min-width: 992px) {
   .experience::before {
