--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 body {
   color: $black;
   font-family: 'Poppins', sans-serif;
