--- a/styles/scss/components/_logo.scss
+++ b/styles/scss/components/_logo.scss
@@ -2,6 +2,10 @@
   align-items: center;
   display: flex;
 
+  &:hover {
+    color: inherit;
+  }
+
   &__title {
     font-size: 24px;
     font-weight: bold;
