Установлен и настроен gulp
Сборка в папку dist
Папка dist в репозиторий не передается, планируется авто сборка

--- a/src/scss/page/_experience.scss
+++ b/src/scss/page/_experience.scss
@@ -59,7 +59,7 @@
 
     &::before {
       @media (min-width: 992px) {
-        background: url('../../assets/images/bg/semicircle.svg') no-repeat;
+        background: url('./assets/images/bg/semicircle.svg') no-repeat;
         bottom: 0;
         content: '';
         height: 372px;
