Создан отдельный класс для стилизации nav
Стили вынесены, js актуализирован

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 // layout
 @import 'layout/site';
 @import 'layout/header';
+@import 'layout/header-nav';
 @import 'layout/page';
 @import 'layout/footer';
 @import 'layout/footer-unit';
