--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -31,7 +31,6 @@
       margin: -15px;
       padding: 15px;
       position: fixed;
-      right: 0;
       right: 30px;
       top: 45px;
       transition: $base-duration * 2 ease;
@@ -44,7 +43,7 @@
         background-color: $white;
         border-radius: 50%;
         box-shadow: 0 1px 8px rgba(0, 0, 0, 0.4);
-        content: '';
+        content: "";
         height: 63px;
         left: 0;
         opacity: 0;
